src/test/run-pass/issues/issue-16256.rs
// run-pass
// pretty-expanded FIXME #23616

fn main() {
    let mut buf = Vec::new();
    |c: u8| buf.push(c);
}
